--- a/paper/references.bib
+++ b/paper/references.bib
@@ -87,3 +87,21 @@
   url = {https://mc-stan.org/rstanarm},
 },
 @misc{Barik_2023, title={Citation and authors}, url={[https://politicalpulse.net/politics/federal-opinion-polls-canada/]}, journal={Latest Federal Opinion Polls Canada 2025: Game over for Justin Trudeau?*}, publisher={The PoliticalPulse.}, author={Barik, A}, year={2023}, month={Nov}} 
+@Manual{MASS,
+    title = {Modern Applied Statistics with S},
+    author = {W. N. Venables and B. D. Ripley},
+    year = {2002},
+    publisher = {Springer},
+    address = {New York},
+    edition = {Fourth},
+    note = {ISBN 0-387-95457-0},
+    url = {https://www.stats.ox.ac.uk/pub/MASS4},
+}
+@Manual{broom,
+    title = {broom: Convert Statistical Analysis Objects into Tidy Tibbles},
+    author = {David Robinson and Alex Hayes and Simon Couch and Max Kuhn and tidymodels contributors},
+    year = {2021},
+    note = {R package version x.x.x},
+    url = {https://CRAN.R-project.org/package=broom},
+}
+
